[package]
name = "runjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_ast = { version = "0.27.2", features = ["transpiling"] }
deno_core = "0.195.0"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
